k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: capstone
  labels:
    app: devops-capstone
    managed-by: kubectl
